sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort()  { val n = getNombreValeurs() - 1
^AlgCocktailSort1:2: error: expected class or object definition
def cocktailSort()  { val n = getNombreValeurs() - 1
^AlgCocktailSort1:9: error: Missing closing brace `}' assumed here
                      for (i<- (0 to n).reverse) {
                      ^AlgCocktailSort1:18: error: Missing closing brace `}' assumed here
}
^